<resources>
    <string name="app_name">FoodLogIn</string>
    <string name="burgies">Burgies</string>
    <string name="intro_text">Cuisine food at your door</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="sign_up_txt">Already have an account?   Sign in here.</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="sign_in_txt">Already have an account?   Sign in here.</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="cheese_burger_mushroom">Cheese burger mushroom</string>

</resources>
