<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_full"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <!--text view-->
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/log_in_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/burgies"
            android:textColor="@color/colorWhite"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/intro_text"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>


    <!--card account details-->
    <androidx.cardview.widget.CardView
        android:id="@+id/log_in_card"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                app:errorEnabled="true"

                android:hint="@string/email_address"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"


                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                app:errorEnabled="true"

                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--signUpBtn-->
            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="168dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/sign_in"


                android:text="@string/btn_sign_in"
                android:textAllCaps="false"

                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_pass">

            </Button>

            <!--sign in - forward-->

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/sign_in_txt"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>